fix spacing for playlist name, other css edits, edit README

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 h1 .highlight {
-  color: #146628;
+  color: #125824;
 }
 
 h2 {
